--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </script>
   </head>
 
-  <body class="index" data-languages="[&quot;shell&quot;,&quot;python&quot;,&quot;javascript--node&quot;,&quot;javascript&quot;,&quot;java&quot;,&quot;php&quot;,&quot;http&quot;]">
+  <body class="index" data-languages="[]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -297,15 +297,6 @@
     </a>
     <div class="toc-wrapper">
       <img src="images/logo-1e815a84.png" class="logo" alt="" />
-        <div class="lang-selector">
-              <a href="#" data-language-name="shell">shell (cURL)</a>
-              <a href="#" data-language-name="python">Python (Requests)</a>
-              <a href="#" data-language-name="javascript--node">Node.js</a>
-              <a href="#" data-language-name="javascript">JavaScript</a>
-              <a href="#" data-language-name="java">Java (Unirest)</a>
-              <a href="#" data-language-name="php">PHP (HTTP v2)</a>
-              <a href="#" data-language-name="http">HTTP</a>
-        </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
@@ -702,15 +693,6 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 
       </div>
       <div class="dark-box">
-          <div class="lang-selector">
-                <a href="#" data-language-name="shell">shell (cURL)</a>
-                <a href="#" data-language-name="python">Python (Requests)</a>
-                <a href="#" data-language-name="javascript--node">Node.js</a>
-                <a href="#" data-language-name="javascript">JavaScript</a>
-                <a href="#" data-language-name="java">Java (Unirest)</a>
-                <a href="#" data-language-name="php">PHP (HTTP v2)</a>
-                <a href="#" data-language-name="http">HTTP</a>
-          </div>
       </div>
     </div>
   </body>
