--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   color: #859900;
 }
     </style>
-    <link href="stylesheets/screen-dc48009d.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/screen-c508e4f2.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
       <script src="javascripts/all-e9bde216.js"></script>
 
@@ -288,7 +288,7 @@
     </script>
   </head>
 
-  <body class="index" data-languages="[]">
+  <body class="index" data-languages="[&quot;shell&quot;,&quot;python&quot;,&quot;javascript--node&quot;,&quot;javascript&quot;,&quot;java&quot;,&quot;php&quot;,&quot;http&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -297,6 +297,15 @@
     </a>
     <div class="toc-wrapper">
       <img src="images/logo-1e815a84.png" class="logo" alt="" />
+        <div class="lang-selector">
+              <a href="#" data-language-name="shell">shell (cURL)</a>
+              <a href="#" data-language-name="python">Python (Requests)</a>
+              <a href="#" data-language-name="javascript--node">Node.js</a>
+              <a href="#" data-language-name="javascript">JavaScript</a>
+              <a href="#" data-language-name="java">Java (Unirest)</a>
+              <a href="#" data-language-name="php">PHP (HTTP v2)</a>
+              <a href="#" data-language-name="http">HTTP</a>
+        </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
@@ -693,6 +702,15 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 
       </div>
       <div class="dark-box">
+          <div class="lang-selector">
+                <a href="#" data-language-name="shell">shell (cURL)</a>
+                <a href="#" data-language-name="python">Python (Requests)</a>
+                <a href="#" data-language-name="javascript--node">Node.js</a>
+                <a href="#" data-language-name="javascript">JavaScript</a>
+                <a href="#" data-language-name="java">Java (Unirest)</a>
+                <a href="#" data-language-name="php">PHP (HTTP v2)</a>
+                <a href="#" data-language-name="http">HTTP</a>
+          </div>
       </div>
     </div>
   </body>
