--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#api-account-postaccount" class="toc-h2 toc-link" data-title="  - api/account/postAccount">  - api/account/postAccount</a>
+                    <a href="#api-account-getaccountstorage" class="toc-h2 toc-link" data-title="  - api/account/getAccountStorage">  - api/account/getAccountStorage</a>
                   </li>
               </ul>
           </li>
@@ -376,8 +376,9 @@ You must replace <code>meowmeowmeow</code> with your personal API key.
 <hr>
 
 <p>includes:
-  - api/account/getAccount</p>
-<h2 id='api-account-postaccount'>  - api/account/postAccount</h2><h1 id='account-api'>Account API</h1><h1 id='errors'>Errors</h1>
+  - api/account/getAccount
+  - api/account/postAccount</p>
+<h2 id='api-account-getaccountstorage'>  - api/account/getAccountStorage</h2><h1 id='account-api'>Account API</h1><h1 id='errors'>Errors</h1>
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
 </aside>
